17 - Anzahl in Kassenstand berechnen speichern

--- a/settings/config.default.properties
+++ b/settings/config.default.properties
@@ -4,3 +4,4 @@ kassenbuch.rechnungsverzeichnis=
 kassenbuch.ablageverzeichnis=
 kassenbuch.letztecsvdateipfad=
 kassenbuch.ausgangsbetrag=
+kassenbuch.kassenstand=
