19 - Einbindung und Neuprogrammierung Reparatur-/Kundenverwaltung
* Filiale wählen und in Einstellungen speichern
* Filialen anlegen/editieren/löschen

--- a/settings/config.default.properties
+++ b/settings/config.default.properties
@@ -5,3 +5,4 @@ kassenbuch.ablageverzeichnis=
 kassenbuch.letztecsvdateipfad=
 kassenbuch.ausgangsbetrag=
 kassenbuch.kassenstand=
+reparatur.filiale=
