Daten via Rest-URL in Tabelle laden

--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
                             <goal>grunt</goal>
                         </goals>
                         <configuration>
-                            <arguments>copy</arguments>
+                            <arguments>copy:prod</arguments>
                         </configuration>
                     </execution>
 
