--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "vue": "^2.5.16",
-    "vuejs-paginator": "^2.0.2"
+    "vue": "^2.5.16"
   }
 }
