--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   },
   "homepage": "https://github.com/razilein/kassenbuch#readme",
   "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^1.1.0"
+    "eslint": "5.8.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-prettier": "3.0.0",
+    "grunt": "1.0.3",
+    "grunt-cli": "1.3.1",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-jshint": "2.0.0",
+    "grunt-eslint": "21.0.0",
+    "prettier": "1.14.3"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "vue": "^2.5.16"
+    "axios": "0.18.0",
+    "vue": "2.5.17"
   }
 }
