--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -1,7 +1,15 @@
 spring.datasource.url=jdbc:hsqldb:
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.hibernate.ddl-auto=none
+
+logging.file=<path-to-logfiles>/kassenbuch.log
+logging.file.max-history=10
+logging.file.max-size=10MB
+
+logging.level.root=INFO
+
+logging.level.de.sg=INFO
+logging.level.org.hibernate=WARN
