Show Username and logoutlink and profilelink, add session timeout of 45m

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -5,6 +5,9 @@ spring.datasource.password=
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.hibernate.ddl-auto=none
 
+server.servlet.session.cookie.max-age=45m
+server.servlet.session.timeout=45m
+
 logging.file=<path-to-logfiles>/kassenbuch.log
 logging.file.max-history=10
 logging.file.max-size=10MB
