--- a/pom.xml
+++ b/pom.xml
@@ -84,9 +84,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.0.13.Final</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
