--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,34 @@
   "extends": ["plugin:prettier/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "no-console": 1,
+    "no-empty": 1,
+    "no-extra-parens": [1,"all"],
+    "no-irregular-whitespace": 1,
+    "no-unreachable": 1,
+    "valid-typeof": 1,
+    "complexity": [1,3],
+    "default-case": 1,
+    "eqeqeq": [1,"smart"],
+    "no-alert": 1,
+    "no-fallthrough": 1,
+    "no-multi-spaces": 1,
+    "no-redeclare": [1,{"builtinGlobals":true}],
+    "no-return-assign": [1,"always"],
+    "no-warning-comments": [1,{"terms":["TODO"],"location":"anywhere"}],
+    "init-declarations": [1,"always"],
+    "no-delete-var": 1,
+    "no-shadow": [1,{"builtinGlobals":true,"hoist":"all"}],
+    "no-undef-init": 1,
+    "no-unused-vars": 1,
+    "no-use-before-define": [1,"nofunc"],
+    "eol-last": 1,
+    "indent": ["error", 2],
+    "no-mixed-spaces-and-tabs": [1,"smart-tabs"],
+    "no-multiple-empty-lines": [1,{"max":1}],
+    "no-trailing-spaces": 1,
+    "semi": [1,"always"]
   }
 }
+
