--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -5,6 +5,11 @@ spring.datasource.password=
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.hibernate.ddl-auto=none
 
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+
 server.servlet.session.cookie.max-age=45m
 server.servlet.session.timeout=45m
 
