Seite zum Exportieren der Rechnungen eines Monats

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+spring.main.banner-mode=off
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
@@ -17,7 +18,7 @@ logging.file=<path-to-logfiles>/kassenbuch.log
 logging.file.max-history=10
 logging.file.max-size=10MB
 
-logging.level.root=INFO
+logging.level.root=WARN
 
 logging.level.de.sg=INFO
 logging.level.org.hibernate=WARN
