--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.main.banner-mode=off
+#spring.main.banner-mode=off
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
