Add spring.jpa.open-in-view to application.properties

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -4,6 +4,7 @@ spring.datasource.password=
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=true
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
