--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.sg.computerinsel</groupId>
     <artifactId>kassenbuch</artifactId>
-    <version>2.7.1</version>
+    <version>2.8.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>tools</name>
